[package]
name = "orion-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = {version = "0.13", features = ["derive"]}
rand = {version = "0.8.5", features = ["small_rng"] }
nalgebra = "0.32.5"
num-traits = "0.2.18"
field-matrix-utils = "0.1.1"
ark-ff = "0.4.2"
thiserror = "1"
